name:                hs-mqtt
version:             0.1.0.0
synopsis:            haskell MQTT client
homepage:            https://github.com/kfowler/hs-mqtt
license:             MIT
license-file:        LICENSE
author:              Kevin Fowler
maintainer:          kfowler@esterdome.com
category:            Network
build-type:          Simple
cabal-version:       >=1.20

executable hs-mqtt
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , amqp >= 0.10.1
                     , blaze-builder >= 0.3.3.4
                     , cmdargs >= 0.10

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings

Test-Suite test-hs-mqtt
  type: exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is: Spec.hs
  build-depends:       amqp >= 0.10.1
                     , base >=4.7 && <4.8
                     , blaze-builder >= 0.3.3.4
                     , cmdargs >= 0.10
                     , hspec == 2.*
                     , text >= 1.1.0.0
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings

source-repository head
 type: git
 location: https://github.com/kfowler/hs-mqtt

