name:                hs-mqtt
version:             0.1.0.0
synopsis:            haskell MQTT client
homepage:            https://github.com/kfowler/hs-mqtt
license:             MIT
license-file:        LICENSE
author:              Kevin Fowler
maintainer:          kfowler@esterdome.com
category:            Network
build-type:          Simple
cabal-version:       >=1.20

executable hs-consume
  main-is:             Consume.hs
  build-depends:       aeson >= 0.8
                     , amqp >= 0.10.1
                     , base >=4.7 && <4.8
                     , blaze-builder >= 0.3.3.4
                     , bytestring >= 0.10.4.0
                     , cmdargs >= 0.10
                     , text >= 1.1.0.0

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings


executable hs-produce
  main-is:             Produce.hs
  build-depends:       aeson >= 0.8
                     , amqp >= 0.10.1
                     , base >=4.7 && <4.8
                     , blaze-builder >= 0.3.3.4
                     , bytestring >= 0.10.4.0
                     , cmdargs >= 0.10
                     , text >= 1.1.0.0

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings

Test-Suite test-hs-mqtt
  type: exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is: Spec.hs
  build-depends:       aeson >= 0.8
                     , amqp >= 0.10.1
                     , base >=4.7 && <4.8
                     , blaze-builder >= 0.3.3.4
                     , bytestring >= 0.10.4.0
                     , cmdargs >= 0.10
                     , hspec == 2.*
                     , text >= 1.1.0.0
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings

source-repository head
 type: git
 location: https://github.com/kfowler/hs-mqtt

